<resources>
    <string name="app_name">BusinessApp</string>
    <string name="register_your_email_id">Register Your Email Id</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="welcome_upload_photo">Welcome Upload Photo</string>
    <string name="log_out">Log out</string>
    <string name="already_registered_login">Already Registered Login</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string name="image">Image</string>
    <string name="business">Manage Your Business</string>
    <string name="stock_management">Stock Management</string>
    <string name="customer_management">Customer Management</string>
    <string name="employee_management">Employee Management</string>
    <string name="account_management">Account Management</string>
    <string name="manage_your_stocks">Manage Your Stocks</string>
    <string name="view_stock_list">View Stock List</string>
    <string name="search_item">Search Item</string>
    <string name="update_stock_data">Update Stock Data</string>
    <string name="view_purchase_list">View Purchase List</string>
    <string name="update_purchase_list">Update Purchase List</string>
    <string name="view_purchase_record">View Purchase Record</string>
    <string name="add_purchased_item">Add Purchased Item</string>
    <string name="view_sales_record">View Sales Record</string>
    <string name="add_sold_item">Add Sold Item</string>
    <string name="manage_your_account">Manage Your Account</string>
    <string name="stock_details">Stock Details</string>
    <string name="enter_stock_name">Enter Stock Name</string>
    <string name="search">Search</string>
    <string name="display_stock_name">\"Stock Name: \"</string>
    <string name="enter_sold_stock_quantity">Enter Sold Stock Quantity</string>
    <string name="add">Add</string>
    <string name="add_sold_item_record">Add Sold Item Record</string>
    <string name="back">Back</string>
    <string name="manage_stocks">Manage Stocks</string>
    <string name="customer_debt_record">Customer Debt Record</string>
    <string name="search_record">Search Record</string>
    <string name="update_record">Update Record</string>
    <string name="view_debt_list">View Debt List</string>
    <string name="customer_record">Customer Record</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_paid_debt_amount">Enter Debt Amount</string>
    <string name="update">Update</string>
    <string name="update_customer_record">Update Customer Record</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add_record">Add Record</string>
    <string name="enter_debt_amount">Enter Debt Amount</string>
    <string name="add_new_customer_record">Add New Customer Record</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_stock_price">Enter Stock Price</string>
    <string name="current_balance">Current Balance</string>
    <string name="customer_list">Customer List</string>
    <string name="customer_name_phone_no_debt_amount">SNo Name Phone Debt</string>
    <string name="stock_list">Stock List</string>
    <string name="sno_name_quantity_price">SNo Name Quantity Price</string>
</resources>