<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD600"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AccountManagement">

    <!-- TextView for heading -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/manage_your_account"
        android:minHeight="60dip"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="15dp">

        <Button
            android:id="@+id/btnAddSoldItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:text="@string/add_sold_item"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCurrentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:text="@string/current_balance"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textCurrentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAddPurchasedItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:text="@string/add_purchased_item"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnViewPurchaseRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:text="@string/view_purchase_record"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>