<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD600"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AddSoldRecord">

    <!-- TextView for heading -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:minHeight="60dip"
        android:text="@string/add_sold_item_record"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="15dp">


        <EditText
            android:id="@+id/fieldStockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_stock_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:textColor="#33691E"
            android:textColorHint="#33691E" />

        <EditText
            android:id="@+id/fieldStockQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_sold_stock_quantity"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:textColor="#33691E"
            android:textColorHint="#33691E" />

        <Button
            android:id="@+id/btnAddSoldItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:text="@string/add"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>